Fix tagfilter header in dark mode

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -152,7 +152,7 @@ body[data-theme="dark"] {
         @apply text-white;
     }
     .lg\:shadow-lg {
-        box-shadow: 0 20px 25px -5px rgba(255, 255, 255, 0.1), 0 10px 10px -5px rgba(255, 255, 255, 0.04)
+        box-shadow: 0 20px 25px -5px rgba(255, 255, 255, 0.1), 0 10px 10px -5px rgba(255, 255, 255, 0.04);
     }
     .learn-button {
         background-color: #c4c4c4;
@@ -165,9 +165,11 @@ body[data-theme="dark"] {
     input[type="text"] {
         background-color: #191b1f;
     }
-    .bg-white,
-    .bg-gray-100 {
+    .bg-white {
         background-color: #191b1f;
+    }
+    .bg-gray-100 {
+        @apply bg-gray-600;
     }
     .post-card-excerpt {
         @apply text-gray-500;
